# deliveryapp

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/edge_detector/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edge_detector/: MainActivity.java  MyGLRenderer.java
app/src/main/java/com/example/edge_detector/gl/: MyGLRenderer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/edge_detector/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html
web/src/: app.ts
